--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ html{
     font-size: 62.5%;
     scroll-behavior: smooth;
     scroll-padding-top: 6rem;
-    overflow: hidden;
+    /* overflow: hidden;  Remove or comment this out to allow scrolling */
 }
 
 section{
